# tiffcraft

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build.sh  install.sh  run_test.sh  shared_cmake_preset.sh
.github/workflows/: workflow.yml
apps/: CMakeLists.txt  tiff_exporter.cpp
examples/: CMakeLists.txt  tiff_exporter.cpp  tiff_image.cpp
include/: TiffCraft.hpp  TiffExporter.hpp  TiffImage.hpp  TiffStdOut.hpp  TiffTags.hpp
include/tiffcraft/: TiffCraft.hpp  TiffExporter.hpp  TiffImage.hpp  TiffStdOut.hpp  TiffTags.hpp
tests/: CMakeLists.txt  TiffHeaderTest.cpp  flower-rgb-contig-08.h  flowerImageTest.cpp  makeReferenceImg.cpp  netpbm.hpp  test.cpp  tiffExporterTest.cpp  tiffImageTest.cpp  tiffSimpleTest.cpp
tests/reference_images/: cramps-tile.pgm  flower-minisblack-02.pgm  flower-minisblack-04.pgm  flower-minisblack-06.pgm  flower-minisblack-08.pgm  flower-minisblack-10.pgm  flower-minisblack-12.pgm  flower-minisblack-14.pgm  flower-minisblack-16.pgm  flower-minisblack-24.pgm  flower-minisblack-32.pgm  flower-palette-02.ppm  flower-palette-04.ppm  flower-palette-08.ppm  flower-palette-16.ppm  flower-rgb-contig-02.ppm  flower-rgb-contig-10.ppm  flower-rgb-contig-14.ppm  flower-rgb-contig-24.ppm  flower-rgb-contig-32.ppm  flower-rgb-planar-04.ppm  flower-rgb-planar-08.ppm  flower-rgb-planar-12.ppm  flower-rgb-planar-16.ppm  flower-rgb-planar-32.ppm  flower-separated-contig-08.ppm  jim___ah.pbm  jim___cg.pgm  jim___gg.pgm  magick.txt  pc260001.ppm
